Working on state generation from config.

--- a/tests/bot/config.yaml
+++ b/tests/bot/config.yaml
@@ -13,11 +13,11 @@ ContextBackend:
 Global: [Hi]
 States:
     Main:
-        Type: C
+        Type: Basic
         Commands:
             Start: Repeat
     Repeat:
-        Type: A
+        Type: Awaiting
         Await: Echo
         Commands:
             End: Main
