--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ isort = "^4.3"
 pytest = "^5.1"
 pytest-mock = "^1.10"
 pytest-cov = "^2.7"
+pytest-deadfixtures = "^2.1"
+unify = "^0.5.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
