--- a/setup.cfg
+++ b/setup.cfg
@@ -33,8 +33,8 @@ default_section = THIRDPARTY
 include_trailing_comma = true
 line_length = 100
 multi_line_output = 3
-not_skip = __init__.py
-known_first_party = travel_bot,conf,notifications_proxy,redis_queue
+skip = __init__.py,processor.py
+known_first_party = spockesman
 
 [mypy]
 check_untyped_defs = true
@@ -47,3 +47,12 @@ ignore_errors = True
 
 [mypy-spockesman.processor]  # mypy doesn't do well with magic methods and stuff
 ignore_errors = True
+
+[coverage:run]
+omit = tests/*,**/__main__.py
+branch = True
+
+[coverage:report]
+show_missing = True
+skip_covered = True
+fail_under = 85
