--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,15 @@
 [tool.poetry]
 name = "spockesman"
-version = "0.4.0"
+version = "0.4.5"
 description = "Declarative state-machine - mainly for chat bots"
 authors = ["Beschastnov Igor Vladimirovich <i.beschastnov@tinkoff.ru>"]
 
 [tool.poetry.dependencies]
 python = "^3.6"
-PyYAML = "^5.1"
 redis = "^3.3"
 
 [tool.poetry.dev-dependencies]
-black = {version = "^18.3-alpha.0", allows-prereleases = true}
+black = {version = "^18.3-alpha.0", allow-prereleases = true}
 mypy = "^0.720.0"
 pylint = "^2.4"
 isort = "^4.3"
